Archive requests working end-to-end
